--- a/react-pos/package.json
+++ b/react-pos/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.17.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
-    "moment": "^2.20.1",
-    "react": "^16.2.0",
+    "moment": "^2.29.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.14.0",
+    "react-print-components": "^1.0.4",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
+    "react-router": "0.0.0-experimental-ffd8c7d0",
+    "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
