--- a/react-pos/package.json
+++ b/react-pos/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^3.4.1",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "mdbreact": "^5.0.0",
     "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-bootstrap": "^0.31.5",
+    "react-chips": "^0.8.0",
     "react-dom": "^16.14.0",
     "react-print-components": "^1.0.4",
     "react-redux": "^5.0.6",
