--- a/react-pos/package.json
+++ b/react-pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pos",
-  "homepage": "kcmotorspareparts.online/main",
+  "homepage": "http://pos-react.kcmotorspareparts.online/main",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
