--- a/react-pos/package.json
+++ b/react-pos/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-pos",
+  "homepage" : "http://myname.github.io/myapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
