Updated with major versions

--- a/react-pos/package.json
+++ b/react-pos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pos",
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,7 @@
     "react-router": "0.0.0-experimental-ffd8c7d0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.0",
+    "react-scripts": "^4.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4"
@@ -31,5 +31,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
